<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="main_home_navigation_signature">SIGNATURE</string>
    <string name="main_home_navigation_crypto">CRYPTO</string>
    <string name="main_home_navigation_eid">MY eID</string>
    <string name="main_home_logo">DigiDoc</string>
    <string name="main_home_menu_title">Menu</string>
    <string name="main_home_menu_button">Menu</string>
    <string name="main_home_menu_help">HELP</string>
    <string name="main_home_menu_help_url_short">link www.id.ee</string>
    <string name="main_home_menu_help_url">https://www.id.ee/en/id-help/</string>
    <string name="main_home_menu_accessibility">ACCESSIBILITY</string>
    <string name="main_home_recent">RECENT DOCUMENTS</string>
    <string name="main_home_menu_settings">SETTINGS</string>
    <string name="main_home_menu_about">INFO</string>
    <string name="main_home_menu_diagnostics">DIAGNOSTICS</string>
    <string name="main_accessibility_title">Accessibility</string>
    <string name="main_accessibility_link">More information can be found on <a href="https://www.id.ee/ligipaasetavuse-teatis/">here</a>.</string>
    <string name="main_accessibility_introduction">RIA DigiDoc is designed to comply with the WCAG 2.1 AA accessibility guidelines. This means that the RIA DigiDoc application has been developed using the principles that the application should be usable by the blind and people with visual, mobility, and strength impairments.</string>
    <string name="main_accessibility_introduction_2">Accessibility can be improved by using built-in assistive tools on your smart device. You can find an overview of the main assistive tools below.</string>
    <string name="main_accessibility_introduction_screen_reader_title">Screen reader</string>
    <string name="main_accessibility_introduction_screen_reader_introduction">A screen reader is a program that converts the information on the screen of a smart device into a user-friendly output, for instance, into speech. In particular, it is a tool for the visually impaired.</string>
    <string name="main_accessibility_introduction_screen_reader_introduction_2">RIA DigiDoc has been built based on the principle that all types of visual content can be converted into user-friendly output. For example, the images are accompanied by textual descriptions. Furthermore, the arrangement and order of the structural elements consider the screen reader’s movement on the screen and allow the information to be consumed in a logical sequence.</string>
    <string name="main_accessibility_introduction_screen_reader_introduction_apps">The most common smart device screen readers:</string>
    <string name="main_accessibility_introduction_screen_reader_introduction_ios">VoiceOver (iOS, built in) https://support.apple.com/en-gb/guide/iphone/iph3e2e415f/ios</string>
    <string name="main_accessibility_introduction_screen_reader_introduction_android">Talkback (Android, built in) https://support.google.com/accessibility/android/answer/6007100?hl=en</string>
    <string name="main_accessibility_introduction_screen_magnification_title">Screen magnification and colour change</string>
    <string name="main_accessibility_introduction_screen_magnification_introduction">If you have enough vision to read the text, you can use the built-in assistive tools to view the screen more comfortably. Assistive tools make it possible to change the size of text, the main font, and the colours of the user interface and enlarge the screen by using the screen magnifier.</string>
    <string name="main_accessibility_introduction_screen_magnification_screen_tools">Tools to adjust screen colour and text size:</string>
    <string name="main_accessibility_introduction_screen_magnification_screen_tools_ios">iOS https://support.apple.com/en-gb/guide/iphone/iph3e2e1fb0/ios</string>
    <string name="main_accessibility_introduction_screen_magnification_screen_tools_android">Android https://support.google.com/accessibility/android/answer/11183305?hl=en&amp;ref_topic=9079043</string>
    <string name="main_accessibility_introduction_screen_magnification_tools">Screen magnification tools:</string>
    <string name="main_accessibility_introduction_screen_magnification_tools_ios">Zoom (iOS, built in) https://support.apple.com/en-gb/guide/iphone/iph3e2e367e/ios</string>
    <string name="main_accessibility_introduction_screen_magnification_tools_android">Magnification (Android, built in) https://support.google.com/accessibility/android/answer/6006949?hl=en</string>
    <string name="main_settings_title">Settings</string>
    <string name="main_settings_use_default_settings_button_title">USE DEFAULT SETTINGS</string>
    <string name="main_settings_use_default_settings_message">Default settings restored</string>
    <string name="main_settings_rights">Permissions</string>
    <string name="main_settings_proxy_button">Proxy</string>
    <string name="main_settings_proxy_no_proxy">No proxy</string>
    <string name="main_settings_proxy_use_system">Use system proxy settings</string>
    <string name="main_settings_proxy_manual">Manual proxy configuration</string>
    <string name="main_settings_proxy_host">Host</string>
    <string name="main_settings_proxy_port">Port</string>
    <string name="main_settings_proxy_username">Username</string>
    <string name="main_settings_proxy_password">Password</string>
    <string name="main_settings_proxy_check_connection">Check connection</string>
    <string name="main_settings_proxy_check_connection_success">Internet connection available!</string>
    <string name="main_settings_proxy_check_connection_unsuccessful">No internet connection!</string>
    <string name="main_settings_proxy_check_username_and_password">Check proxy username and password</string>
    <string name="main_settings_role_and_address_button">Role and address</string>
    <string name="main_settings_phone_no_title">Country code and phone number</string>
    <string name="main_settings_personal_code_title">Personal code</string>
    <string name="main_settings_tsa_url_title">Access to Time-Stamping service</string>
    <string name="main_settings_uuid_title">Access to mobile-ID and Smart-ID service</string>
    <string name="main_settings_tsa_url_use_default">Use default</string>
    <string name="main_settings_ask_role_and_address_title">Ask role and address info on signing</string>
    <string name="main_settings_role_title">Role / resolution</string>
    <string name="main_settings_city_title">City</string>
    <string name="main_settings_county_title">State</string>
    <string name="main_settings_country_title">Country</string>
    <string name="main_settings_postal_code_title">Zip</string>
    <string name="main_settings_signature_profile_title">Default file type</string>
    <string name="main_settings_open_all_filetypes_title">Allow app to use all file types (requires app restart)</string>
    <string name="main_settings_allow_screenshots_title">Allow screenshots (requires app restart)</string>
    <string name="main_settings_timestamp_cert_title">Time-Stamping service SSL certificate</string>
    <string name="main_settings_timestamp_cert_issued_to_title">Issued to: </string>
    <string name="main_settings_timestamp_cert_valid_to_title">Valid to: </string>
    <string name="main_settings_timestamp_cert_add_certificate_button">ADD CERTIFICATE</string>
    <string name="main_settings_timestamp_cert_show_certificate_button">SHOW CERTIFICATE</string>
    <string name="main_settings_siva_service_title">Access to Digital Signature Validation Service SiVa</string>
    <string name="main_settings_siva_default_access_title">Use default access</string>
    <string name="main_settings_siva_default_manual_access_title">Use manually configured access</string>
    <string name="main_settings_siva_certificate_title">Digital Signature Validation Service SiVa SSL certificate</string>
    <string name="main_about_title">Info</string>
    <string name="main_about_digidoc_and_el_logos">The project is supported by the European Regional Development Fund</string>
    <string name="main_about_ria_digidoc_version_title">RIA DigiDoc version %1$s</string>
    <string name="main_about_software_developed_by_title">Estonian ID-software is released by Information System Authority</string>
    <string name="main_about_contact_information_title">In case of questions please contact our support via <a href="http://www.id.ee">id.ee</a></string>
    <string name="main_about_licenses_title">Additional licenses and components</string>
    <string name="main_about_terms_and_conditions">User terms and conditions:</string>
    <string name="main_diagnostics_title">Diagnostics</string>
    <string name="main_diagnostics_application_version_title">Application version:\u0020</string>
    <string name="main_diagnostics_operating_system_title">OS:\u0020</string>
    <string name="main_diagnostics_libraries_title">Libraries:</string>
    <string name="main_diagnostics_urls_title">URLs:</string>
    <string name="main_diagnostics_tsl_cache_title">TSL cache:</string>
    <string name="main_diagnostics_central_configuration_title">Central configuration:</string>
    <string name="main_diagnostics_configuration_update_date">UPDATE DATE:\u0020</string>
    <string name="main_diagnostics_configuration_last_check_date">LAST CHECK:\u0020</string>
    <string name="main_diagnostics_configuration_check_for_update_button">REFRESH CONFIGURATION</string>
    <string name="main_diagnostics_configuration_save_diagnostics_button">SAVE DIAGNOSTICS</string>
    <string name="main_diagnostics_rpuuid_default">is set by default</string>
    <string name="main_diagnostics_rpuuid_custom">is set manually</string>
    <string name="main_diagnostics_logging_switch">Enable one-time log generation</string>
    <string name="main_diagnostics_save_log">Save log</string>
    <string name="main_diagnostics_restart_message">Restart RIA DigiDoc to activate logging. https://www.id.ee/en/article/log-file-generation-in-digidoc4-client/</string>
    <string name="signature_update_name_update_button">Edit container name</string>
    <string name="signature_update_document_save_button">Save file</string>
    <string name="signature_update_signature_add_method_mobile_id">Mobile-ID</string>
    <string name="signature_update_signature_add_method_smart_id">Smart-ID</string>
    <string name="signature_update_signature_add_method_id_card">ID-card</string>
    <string name="signature_update_signature_selected_method_mobile_id">Signing option Mobile-ID, tab %1$d of %2$d</string>
    <string name="signature_update_signature_selected_method_smart_id">Signing option Smart-ID, tab %1$d of %2$d</string>
    <string name="eid_home_certificate_data_title_auth">Authentication certificate</string>
    <string name="eid_home_certificate_data_valid">Certificate is &lt;c>valid&lt;/c> until %1$s</string>
    <string name="eid_home_certificate_data_button_change_auth" tools:ignore="Typos">CHANGE PIN1</string>
    <string name="eid_home_certificate_data_link_auth" tools:ignore="Typos">Forgot PIN1?</string>
    <string name="eid_home_certificate_data_error_auth" tools:ignore="Typos">PIN1 is blocked, because PIN1 has been inserted 3 times incorrectly.</string>
    <string name="container_title">CONTAINER:</string>
    <string name="crash_report_dialog_header">Send crash report?</string>
    <string name="crash_report_dialog_text">Application crashed. Please send us crash report, so we can fix the problem.</string>
    <string name="crash_report_dialog_send_button">Send</string>
    <string name="crash_report_dialog_always_send_button">Always Send</string>
    <string name="crash_report_dialog_dont_send_button">Don\'t Send</string>
    <string name="container_title_accessibility">Container</string>
</resources>