<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:importantForAccessibility="no"
    tools:parentTag="androidx.coordinatorlayout.widget.CoordinatorLayout"
    tools:layout_width="match_parent"
    tools:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAccessibility="yes"
        android:accessibilityHeading="true"
        android:focusedByDefault="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:screenReaderFocusable="true"
        android:contentDescription="@string/main_accessibility_title"
        >
        <requestFocus/>
        <android.widget.Toolbar
            android:id="@id/toolbar"
            android:theme="@style/ThemeOverlay.Application.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:accessibilityPaneTitle="@string/main_accessibility_title"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:layout_margin="@dimen/material_content_edge_margin_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainAccessibilityIntroduction"
                style="@style/MaterialTypography.Dense.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_accessibility_introduction" />

            <TextView
                android:id="@+id/mainAccessibilityLink"
                style="@style/MaterialTypography.Dense.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:focusable="true"
                android:text="@string/main_accessibility_link" />

            <TextView
                android:id="@+id/mainAccessibilityIntroduction2"
                style="@style/MaterialTypography.Dense.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:text="@string/main_accessibility_introduction_2" />

            <TextView
                android:id="@+id/mainAccessibilityIntroductionScreenReaderTitle"
                style="@style/MaterialTypography.Dense.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_3x"
                android:layout_marginBottom="@dimen/material_baseline_grid_0.5x"
                android:accessibilityHeading="true"
                android:textColor="@color/title"
                android:text="@string/main_accessibility_introduction_screen_reader_title" />

            <TextView
                android:id="@+id/mainAccessibilityIntroductionScreenReaderIntroduction"
                style="@style/MaterialTypography.Dense.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:text="@string/main_accessibility_introduction_screen_reader_introduction" />

            <TextView
                android:id="@+id/mainAccessibilityIntroductionScreenReaderIntroduction2"
                style="@style/MaterialTypography.Dense.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:text="@string/main_accessibility_introduction_screen_reader_introduction_2" />

            <TextView
                android:id="@+id/mainAccessibilityIntroductionScreenReaderIntroductionApps"
                style="@style/MaterialTypography.Dense.Body1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1.5x"
                android:text="@string/main_accessibility_introduction_screen_reader_introduction_apps" />

            <TextView
                android:id="@+id/mainAccessibilityIntroductionScreenReaderIntroductionIos"
                style="@style/MaterialTypography.Dense.Body1"
                android:autoLink="web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:focusable="true"
                android:text="@string/main_accessibility_introduction_screen_reader_introduction_ios" />

            <TextView
                android:id="@+id/mainAccessibilityIntroductionScreenReaderIntroductionAndroid"
                style="@style/MaterialTypography.Dense.Body1"
                android:autoLink="web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:focusable="true"
                android:text="@string/main_accessibility_introduction_screen_reader_introduction_android" />

            <TextView
                android:id="@+id/mainAccessibilityIntroductionScreenMagnificationTitle"
                style="@style/MaterialTypography.Dense.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_3x"
                android:layout_marginBottom="@dimen/material_baseline_grid_0.5x"
                android:accessibilityHeading="true"
                android:textColor="@color/title"
                android:text="@string/main_accessibility_introduction_screen_magnification_title" />

            <TextView
                android:id="@+id/mainAccessibilityIntroductionScreenMagnificationIntroduction"
                style="@style/MaterialTypography.Dense.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:text="@string/main_accessibility_introduction_screen_magnification_introduction" />

            <TextView
                android:id="@+id/mainAccessibilityIntroductionScreenMagnificationScreenTools"
                style="@style/MaterialTypography.Dense.Body1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1.5x"
                android:text="@string/main_accessibility_introduction_screen_magnification_screen_tools" />

            <TextView
                android:id="@+id/mainAccessibilityIntroductionScreenMagnificationScreenToolsIos"
                style="@style/MaterialTypography.Dense.Body1"
                android:autoLink="web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:focusable="true"
                android:text="@string/main_accessibility_introduction_screen_magnification_screen_tools_ios" />

            <TextView
                android:id="@+id/mainAccessibilityIntroductionScreenMagnificationScreenToolsAndroid"
                style="@style/MaterialTypography.Dense.Body1"
                android:autoLink="web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:focusable="true"
                android:text="@string/main_accessibility_introduction_screen_magnification_screen_tools_android" />

            <TextView
                android:id="@+id/mainAccessibilityIntroductionScreenMagnificationTools"
                style="@style/MaterialTypography.Dense.Body1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1.5x"
                android:text="@string/main_accessibility_introduction_screen_magnification_tools" />

            <TextView
                android:id="@+id/mainAccessibilityIntroductionScreenMagnificationToolsIos"
                style="@style/MaterialTypography.Dense.Body1"
                android:autoLink="web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:focusable="true"
                android:text="@string/main_accessibility_introduction_screen_magnification_tools_ios" />

            <TextView
                android:id="@+id/mainAccessibilityIntroductionScreenMagnificationToolsAndroid"
                style="@style/MaterialTypography.Dense.Body1"
                android:autoLink="web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_baseline_grid_1x"
                android:focusable="true"
                android:text="@string/main_accessibility_introduction_screen_magnification_tools_android" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</merge>
