<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:importantForAccessibility="no"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/material_content_edge_margin_horizontal"
        android:src="@drawable/main_about_fonds"
        android:contentDescription="@string/main_about_digidoc_and_el_logos" />

    <TextView
        android:id="@id/mainAboutRiaDigiDocVersionTitle"
        style="@style/Widget.Application.Subheader.Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_content_edge_margin_horizontal"
        android:layout_marginEnd="@dimen/material_content_edge_margin_horizontal"
        android:gravity="center"
        android:accessibilityHeading="true"
        android:text="@string/main_about_ria_digidoc_version_title" />

    <TextView
        style="@style/MaterialTypography.Dense.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_content_edge_margin_horizontal"
        android:layout_marginEnd="@dimen/material_content_edge_margin_horizontal"
        android:gravity="center"
        android:text="@string/main_about_software_developed_by_title" />

    <TextView
        style="@style/MaterialTypography.Dense.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_content_edge_margin_horizontal"
        android:layout_marginTop="@dimen/material_baseline_grid_1x"
        android:layout_marginEnd="@dimen/material_content_edge_margin_horizontal"
        android:gravity="center"
        android:text="@string/main_about_contact_information_title" />

    <TextView
        style="@style/Widget.Application.Subheader.Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_content_edge_margin_horizontal"
        android:layout_marginEnd="@dimen/material_content_edge_margin_horizontal"
        android:layout_marginTop="@dimen/material_content_edge_margin_horizontal"
        android:layout_marginBottom="@dimen/material_baseline_grid_1x"
        android:gravity="center"
        android:accessibilityHeading="true"
        android:text="@string/main_about_licenses_title" />

</LinearLayout>
