<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/material_list_text_first_position_margin_start"
    android:paddingTop="@dimen/material_baseline_grid_1x"
    android:paddingEnd="@dimen/material_baseline_grid_1x"
    android:paddingBottom="@dimen/material_baseline_grid_1x"
    android:orientation="horizontal"
    android:background="@color/primary">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Application.Label"
            android:text="@string/container_title"
            android:focusable="true"
            android:contentDescription="@string/container_title_accessibility"/>

        <TextView
            android:id="@id/signatureUpdateListName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            android:singleLine="true"
            android:focusable="true"
            android:ellipsize="middle" />
    </LinearLayout>

    <ImageButton
        android:id="@id/signatureUpdateListNameUpdateButton"
        style="@style/Widget.Application.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_list_text_first_position_margin_start"
        android:src="@drawable/ic_icon_edit"
        android:focusable="true"
        android:contentDescription="@string/signature_update_name_update_button" />

    <ImageButton
        android:id="@id/signatureUpdateListNameSaveButton"
        style="@style/Widget.Application.Button.Borderless.Colored"
        android:layout_width="@dimen/material_baseline_grid_4x"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/material_menu_simple_padding_vertical"
        android:src="@drawable/ic_icon_save"
        android:focusable="true"
        android:contentDescription="@string/signature_update_document_save_button"
        app:tint="@color/accent" />

</LinearLayout>
